--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
-	.dropdown {
-    position: relative;
+
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
     display: inline-block;
 }
 
@@ -10,74 +32,19 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
 }
 
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
 .dropdown:hover .dropdown-content {
     display: block;
-}
-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: #FFFFFF;
-    height: 100%;
-    overflow: hidden;
-	display: flex;
-	justify-content: center;
-	font-family: 'Archivo', sans-serif;
-}
-ul{
-	list-style-type:;
-	background-color: #fff;
-}
-
-li a {
-    display: inline;
-    color: #ffe718;
-    padding: 14px 16px;
-    text-decoration: none;
-	float:left;
-}
-
-li a {
-    background-color:   #222931;
-    color: white;
-}
-
-li a:hover {
-    background-color: #ffe718 ;
-    color: white;
-}
-div{
-font-family: 'Archivo', sans-serif;
-line-height: 34px;
-font-size:20px;
-margin-left:25%;
-padding:1px 16px;
-height:1000px;
-
-}
-ul >li{
-	
-	
-	margin: 10px 0;
-	font-size:20px;
-	line-height:26px;
-}
-p{
-font-family: 'Archivo', sans-serif;
-line-height: 34px;
-border-radius:4px 25px;
-margin-top:30px;
-font-size:20px;
-margin-left:25%;
-height:100px;
-background-color: #def6ed;
-position:absolute;
-width: 70%;
-margin-left:270px;
-margin-right:270px;
 }
