--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,10 @@ nav{
   grid-template-columns: auto auto auto;
   padding: 10px;
   }
+  .yellowbox{
+     display: block;
+    text-align: center;
+    padding: 200px 150px;
+    background-color: yellow;
+
+  }
