--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,10 @@ nav{
   padding: 10px;
   }
   .yellowbox{
-     display: block;
-    text-align: center;
-    padding: 200px 150px;
-    background-color: yellow;
+display: grid;
+  width: 100%;
+  grid-template-columns: auto;
+  padding: 10px;
+  background-color: yellow;
 
   }
